Fixed truncated captions for units at top of board

--- a/src/tactics/core.scss
+++ b/src/tactics/core.scss
@@ -91,7 +91,7 @@ BODY {
  */
 #app {
   max-width: 836px;
-  max-height: 550px;
+  max-height: 552px;
   visibility: hidden;
 
   #field {
